[tool.poetry]
name = "pdf-parser"
version = "0.1.0"
description = ""
authors = ["Dan Joa <parrymanta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.0"
flask = "^3.1.0"
docling = "^2.6.0"
numpy = ">=2.1.0,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
