[tool.poetry]
name = "pdf-parser"
version = "0.1.0"
description = ""
authors = ["Dan Joa <parrymanta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.1.0"
docling = "*"
gunicorn = "^21.2.0"
deepsearch-glm = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
